--- a/iframe/index.html
+++ b/iframe/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- Safari, fuck you! -->
-<script async src="https://ga.jspm.io/npm:es-module-shims@1.7.0/dist/es-module-shims.js"></script>
+<script async src="./_shim.js"></script>
 <!--script src="canvas-webgl.js"></script-->
 <script type="importmap">
 {"imports": {
