--- a/iframe/index.html
+++ b/iframe/index.html
@@ -136,6 +136,34 @@
 		}
 		C.crop = function(x, y, w, h){ return new _txtr(this.canvas, x, y, w, h) }
 		C.texture = function(){ return new _txtr(this.canvas, 0, 0, this.canvas.width, this.canvas.height) }
+		C.clipRect = function(x0, y0, w, h){
+			this.beginPath()
+			this.rect(x0, y0, w, h)
+			this.closePath()
+			this.clip()
+		}
+		C.button = function(x0, y0, w, h){
+			const {x, y} = this.mouse()
+			if(x<x0|x>x0+w|y<y0|y>y0+h) return 0
+			if(buttons.has(LBUTTON) && changed.has(LBUTTON)) return 2
+			if(buttons.has(RBUTTON) && changed.has(RBUTTON)) return 3
+			return 1
+		}
+		C.input = function(i, x0, y0, w, h, size = 32){
+			if(h<0)y0+=h,h=-h
+			if(w<0)x0+=w,w=-w
+			i.style.textAlign = this.textAlign
+			i.style.left = x0+'px'
+			i.style.marginBottom = y0+'px'
+			i.style.width = w+'px'
+			i.style.height = h+'px'
+			i.style.transform = `scale(${1/devicePixelRatio}) ${this.getTransform()} scaleY(-1)`
+			i.style.font = this.font
+			i.style.fontSize = size+'px'
+			if(!i.parentElement) document.documentElement.append(i)
+			toRem.add(i)
+			return document.activeElement === i
+		}
 		/*const f32_8 = new Float32Array(8)
 		C.drawShader = function(x, y, w, h){
 			const {a, b, c, d, e, f} = this.getTransform()
