new, polished crafting

--- a/iframe/index.html
+++ b/iframe/index.html
@@ -18,6 +18,7 @@
 	}
 </style>
 <script>
+	const _ = undefined
 	pako = null
 	delete window.localStorage; delete window.sessionStorage
 	document.fonts.forEach(font => font.load())
