--- a/iframe/index.html
+++ b/iframe/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Safari, fuck you! -->
 <script async src="./_shim.js"></script>
-<!--script src="canvas-webgl.js"></script-->
+<!--script src="/img/target.min.js"></script-->
 <script type="importmap">
 {"imports": {
 	"api": "./api.js",
