--- a/img/gltest.html
+++ b/img/gltest.html
@@ -22,8 +22,8 @@
 	st.resize(500,300)
 	gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true)
 	const img1 = new Image(), img2 = new Image()
-	img1.src = './img/beacon.png'
-	img2.src = './img/pack.png'
+	img1.src = './beacon.png'
+	img2.src = './pack.png'
 	const tex1 = gl.createTexture(), tex2 = gl.createTexture()
 	let ctex1, ctex2
 	const stex1 = Texture(), stex2 = Texture()
