--- a/img/gltest.html
+++ b/img/gltest.html
@@ -107,7 +107,7 @@ void main(){
 			r *= .9999
 		}
 	}
-
+	const tex = Texture(100, 100, Formats.RGB565)
 	function surfaceDraw(){
 		const buf = CommandBuffer()
 		let r = t, i = 0
