--- a/iframe/index.html
+++ b/iframe/index.html
@@ -199,38 +199,43 @@ gl.disable(3024) // dither
 gl.pixelStorei(3317, 1)
 gl.pixelStorei(3333, 1)
 let pma = 1
+/*function texSub(){}
+function texSuper(){}
+function texCrop(){}
+function texLayer(){}*/
 class img{
 	get format(){return this.t.f}
 	get width(){return this.t.w}
 	get height(){return this.t.h}
 	get layers(){return this.t.d}
-	constructor(t,x=0,y=0,z=1,w=1,l=0){
+	constructor(t,x=0,y=0,w=1,h=1,l=0){
 		this.t = t; this.x = x; this.y = y
-		this.z = z; this.w = w; this.l = l
+		this.w = w; this.h = h; this.l = l
 	}
 	get src(){return this.t.src}
 	set src(a){if(this.t.src===null)return;this.t.src=a?typeof a=='string'?[a]:a:[];if(this.t.tex)this.unload()}
 	get loaded(){return this.t.d!=0}
 	get then(){return this.t.d==0?this.#then:null}
 	sub(x=0, y=0, w=1, h=1, l=this.l){
-		return new img(this.t, this.x+x*this.z, this.y+y*this.w, this.z*w, this.w*h, l)
+		return new img(this.t, this.x+x*this.w, this.y+y*this.h, this.w*w, this.h*h, l)
 	}
 	super(x=0,y=0,w=1,h=1){
-		const tz = this.z/w, tw = this.w/h
-		return new img(this.t, this.x-x*tz, this.y-y*tw, tz, tw)
+		const tw = this.w/w, th = this.h/h
+		return new img(this.t, this.x-x*tw, this.y-y*th, tw, th)
 	}
 	crop(x=0, y=0, w=1, h=1, l=this.l){
-		const {t,x:X,y:Y,w:W}=this
-		if(t.d!=0) return new img(t, X+x/t.w, Y+W-(y+h)/t.h, w/t.w, h/t.h, l)
+		const {t,x:X,y:Y,h:H}=this
+		if(t.d!=0) return new img(t, X+x/t.w, Y+H-(y+h)/t.h, w/t.w, h/t.h, l)
 		const i = new img(t, 0, 0, 0, 0, l)
-		i.#then(i => {
+		;(t.cbs??=[]).push(() => {
 			i.x = X+x/t.w
-			i.y = Y+W-(y+h)/t.h
-			i.z = w/t.w; i.w = h/t.h
-		})
+			i.y = Y+H-(y+h)/t.h
+			i.w = w/t.w; i.h = h/t.h
+		},undefined,undefined)
+		if(!t.tex) img.load(t)
 		return i
 	}
-	layer(l=this.l){return new img(this.t, this.x, this.y, this.z, this.w, l)}
+	layer(l=this.l){return new img(this.t, this.x, this.y, this.w, this.h, l)}
 	#then(cb, rj){
 		const {t}=this
 		if(t.d) return void cb(this)
@@ -666,7 +671,7 @@ globalThis.Shader = (src, inputs, uniforms, output=4, frat=0.5) => {
 	uniforms = typeof uniforms=='number' ? [uniforms] : uniforms || []
 	for(const t of inputs){
 		let c = (t&3)+1, n = names[t&3|t>>4<<2]
-		fnParams.push(id+':'+(c==1?'a'+j:'{x:a'+j+',y:a'+(j+1)+(c==3?',z:a'+(j+2):c==4?',z:a'+(j+2)+',w:a'+(j+3):'')+'}')+(c==1?'=0,':c==2?'=v2z,':c==3?'=v3z,':'=v4z,'))
+		fnParams.push(id+':a'+j+(c==1?'=0,':c==2?'=v2z,':c==3?'=v3z,':'=v4z,'))
 		const A = t>15?(o|=1,'iarr[j+'):'arr[j+'
 		if(t==20||t==24||t==28){
 			n='int',o|=(1<<(t>>2)-3),fCount++
@@ -678,21 +683,24 @@ globalThis.Shader = (src, inputs, uniforms, output=4, frat=0.5) => {
 			texCheck.push(`let a${j+1}=${t==4?`-1;if(a${j}.t&&(a${j+1}=img.auto(a${j}.t,0))==-1)`:`img.auto(a${j+(t==8?'.t,-1':'.t,0')});if(a${j+1}==-1)`}{i&&draw(b^boundUsed);a${j+1}=img.auto(a${j+(t==8?'.t,-1':'.t,0')})}`)
 			fCount++
 			const n = 'GL_'+(j+maxTex)
-			shaderHead.push(`in int GL_${j};in vec4 GL_${j+1};out vec4 ${n};`)
+			shaderHead.push(`in int GL_${j};in vec4 GL_${j+1};centroid out vec4 ${n};`)
 			shaderBody.push(t!=4?`${n}=vec4(GL_${j+1}.xy+pos*GL_${j+1}.zw,GL_${j}&255,GL_${j}>>8);`:`if(GL_${j}<0){${n}=GL_${j+1};${n}.w=max(-15856.,${n}.w);}else{${n}=vec4(GL_${j+1}.xy+pos*GL_${j+1}.zw,GL_${j}&255,GL_${j}<256?-15872:(GL_${j}>>8<<4)-16384);}`)
-			shaderHead2.push(`in vec4 ${n};${t==4?'lowp ':t==8?'u':'highp '}vec4 arg${id}(){`+(t==4?`if(${n}.w>-15872.)return ${n};return getCol(int(${n}.w)>>4&31,${n}.xyz);}`:t==8?`return uGetCol(int(${n}.w),${n}.xyz);}`:`return fGetCol(int(${n}.w),${n}.xyz);}`))
+			shaderHead2.push(`centroid in vec4 ${n};${t==4?'lowp ':t==8?'u':'highp '}vec4 arg${id}(){`+(t==4?`if(${n}.w>-15872.)return ${n};return getCol(int(${n}.w)>>4&31,${n}.xyz);}`:t==8?`return uGetCol(int(${n}.w),${n}.xyz);}`:`return fGetCol(int(${n}.w),${n}.xyz);}`))
 			o|=(1<<(t>>2)+1)
 			types.push(17,4)
 			fnBody.push('iarr[j+'+j+']=a'+(j+1)+'<<8|a'+j+'.l&255')
-			for(c=0;++c<5;) fnBody.push(A+(j+c)+']=a'+j+'.'+' xyzw'[c])
-			j += c
+			for(c=0;++c<3;) fnBody.push(A+(j+c)+']=a'+j+'.'+' xy'[c])
+			fnBody.push(`if(a${j+1}>=0)${A+(j+3)}]=a${j}.w,${A+(j+4)}]=a${j}.h;else ${A+(j+3)}]=a${j}.z,${A+(j+4)}]=a${j}.w`)
+			c=5
 		}else{
 			shaderHead.push('in '+n+' GL_'+j+';flat out '+n+' arg'+id+';')
 			shaderBody.push('arg'+id+'=GL_'+j+';')
 			shaderHead2.push('flat in '+n+' arg'+id+';')
 			types.push(c|t&48)
-			while(c--) fnBody.push(A+j+']=a'+j), j++
+			if(c==1) fnBody.push(A+j+']=a'+j)
+			else for(let c1=-1;++c1<c;) fnBody.push(A+(j+c1)+']=a'+j+'.'+'xyzw'[c1])
 		}
+		j += c
 		id++
 	}
 	id = 0; let j2 = 0, j3 = 0
@@ -700,32 +708,33 @@ globalThis.Shader = (src, inputs, uniforms, output=4, frat=0.5) => {
 	const uniTex = [], uniLocs = []
 	for(const t of uniforms){
 		let c = (t&3)+1, n = names[t&3|t>>4<<2]
-		fn2Params.push((c==1?'a'+j2:'{x:a'+j2+',y:a'+(j2+1)+(c==3?',z:a'+(j2+2):c==4?',z:a'+(j2+2)+',w:a'+(j2+3):'')+'}'))
+		fn2Params.push('a'+j2)
 		if(t==12||t==28) o|=2
 		if(t==8||t==24) iCount++,fCount--
 		if(t==20||t==24||t==28){
 			o|=(1<<(t>>2)-3),fCount++
 			fn3Body.push(`gl.uniform1i(uniLocs[${j3}],uniTex[${uniTex.length}]?img.auto(uniTex[${uniTex.length}]${t==24?',-1':',0'}):${t==24?maxTex:0})`)
 			shaderHead2.push('uniform int uni'+id+';')
-			fn2Body.push(`uniTex[${uniTex.length}]=a${j2++}.t`)
+			fn2Body.push(`uniTex[${uniTex.length}]=a${j2}.t`)
 			uniTex.push(null)
 		}else if(t==4||t==8||t==12){
 			fn3Body.push(`gl.uniform1i(uniLocs[${j3++}],uniTex[${uniTex.length}]?img.auto(uniTex[${uniTex.length}]${t==8?',-1':',0'}):${t==8?maxTex:0})`)
 			uniTex.push(null)
 			fCount++
 			const n = 'GL_'+(j+j2+maxTex)
-			shaderHead.push(`uniform int u${j2};uniform vec4 u${j2+1};out vec4 ${n};`)
+			shaderHead.push(`uniform int u${j2};uniform vec4 u${j2+1};centroid out vec4 ${n};`)
 			shaderBody.push(t!=4?`${n}=vec4(u${j2+1}.xy+pos*u${j2+1}.zw,u${j2}&255,u${j2}>>8);`:`if(u${j2}<0){${n}=u${j2+1};${n}.w=max(-15856.,${n}.w);}else{${n}=vec4(u${j2+1}.xy+pos*u${j2+1}.zw,u${j2}&255,u${j2}<256?-15872:(u${j2}>>8<<4)-16384);}`)
-			shaderHead2.push(`in vec4 ${n};${t==4?'lowp ':t==8?'u':'highp '}vec4 uni${id}(){`+(t==4?`if(${n}.w>-15872.)return ${n};return getCol(int(${n}.w)>>4&31,${n}.xyz);}`:t==8?`return uGetCol(int(${n}.w),${n}.xyz);}`:`return fGetCol(int(${n}.w),${n}.xyz);}`))
+			shaderHead2.push(`centroid in vec4 ${n};${t==4?'lowp ':t==8?'u':'highp '}vec4 uni${id}(){`+(t==4?`if(${n}.w>-15872.)return ${n};return getCol(int(${n}.w)>>4&31,${n}.xyz);}`:t==8?`return uGetCol(int(${n}.w),${n}.xyz);}`:`return fGetCol(int(${n}.w),${n}.xyz);}`))
 			o|=(1<<(t>>2)+1)
-			fn2Body.push(`uniTex[${uniTex.length-1}]=a${j2}.t;gl.uniform4f(uniLocs[${j3}],a${j2}.x,a${j2}.y,a${j2}.z,a${j2}.w)`)
-			j2 += c
+			fn2Body.push(`uniTex[${uniTex.length-1}]=a${j2}.t;gl.uniform4f(uniLocs[${j3}],a${j2}.x,a${j2}.y,a${j2}.w,a${j2}.h)`)
 		}else{
 			shaderHead2.push('uniform '+n+' uni'+id+';')
 			let args = `gl.uniform${c+(t<16?'f':t<32?'i':'ui')}(uniLocs[${j3}]`
-			while(c--) args += ',a'+j2++
+			if(c==1) args += ',a'+j2
+			else for(let c1=-1;++c1<c;) args += ',a'+j2+'.'+'xyzw'[c1]
 			fn2Body.push(args+')')
 		}
+		j2 += c
 		id++; j3++
 	}
 	if(fCount+iCount>16) throw 'Shaders cannot use more than 16 textures/colors'
